--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
       integrity=
 "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous" /> -->
-      
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css" rel="stylesheet" />
+
     <title>React App</title>
   </head>
   <body>
